--- a/report/index.tex
+++ b/report/index.tex
@@ -113,7 +113,8 @@ On utilise donc des outils spécifiques de manière à séparer environnement ut
 
 \subsection{Jhbuild}
 \label{sub:jhbuild}
-JHBuild s'agit d'un outil conçu pour permettre au développeur de construire les librairies d'un projet dans un environnement bac-à-sable, de manière à éviter une instabilité de la machine de développement causée par l'utilisation de librairies en pré-version.
+JHBuild est un outil conçu pour permettre au développeur de construire les librairies d'un projet dans un environnement bac-à-sable, de manière à éviter une instabilité de la machine de développement causée par l'utilisation de librairies en pré-version.
+
 Il fournit certaines commandes très utiles, telles que :
 
 \begin{figure}[h]
