--- a/report/index.tex
+++ b/report/index.tex
@@ -38,24 +38,12 @@
 \tableofcontents %table des matières
 \newpage
 
-\clearpage
-\vspace*{\fill}
-
-\section*{\centerline{Remerciements}} % (fold)
-\begin{center}
-\label{sec:remerciements}
-Nous remercions Arnaud Blouin (IRISA/INSA), notre encadrant, pour sa disponibilité et ses conseils, ainsi que Sébastien Wilmet, développeur et mainteneur de Latexila, pour sont aide.
-\end{center}
-
-\vfill
-\clearpage
-
-
 \chapter{Introduction}
 \label{cha:Introduction}
+
 Les \textit{études pratiques} sont des projets réalisés chaque année pas les élèves du département Informatique de l'INSA de Rennes.
 
-Elles s'étalent sur toute la durée de l'année scolaire et visent à permettre aux étudiants de développer leur sens du travail en équipe ainsi que leur autonomie.
+Elles s'étalent sur l'année scolaire et visent à permettre aux étudiants de développer leur sens du travail en équipe ainsi que leur autonomie.
 Les sujets sont aussi divers que variés, allant de prototypes applicatifs aux sites web, en passant par les réalisations d'IA.
 
 Cette étude pratique en particulier se présente sous la forme d'une contribution à un logiciel dont le code source est libre, c'est à dire qu'il est mis à disposition du public qui peut s'il le souhaite proposer des améliorations.
@@ -66,72 +54,13 @@ Latexila est un projet d'éditeur LaTeX pour le projet Gnome, dont le développe
 Bien que commencé en C, le projet a été porté vers le langage Vala en 2010. LaTeXiLa adopte une approche centrée sur le code, ce qui lui permet d'être bien plus léger que nombre d'autres éditeurs, comme TeXMaker\footnote{\url{http://www.xm1math.net/texmaker/index_fr.html}} par exemple.
 
 De par cette philosophie, il ne possède pas de module WYSIWYG\footnote{What You See Is What You Get - Un mode d'édition ou l'utilisateur édite directement une vue correspondant au rendu final}, ce qui le rend moins facile d'accès.
-Il met cepandant à la disposition de l'utilisateur des outils puissant qui en font bien plus qu'un simple éditeur de texte, comme:
+Il met cependant à la disposition de l'utilisateur des outils puissant qui en font bien plus qu'un simple éditeur de texte, comme:
 
 \begin{itemize}
 	\item Compilation assistée
 	\item Gestion de projet simplifiée
 	\item Complétion à la saisie des commandes \LaTeX
 \end{itemize}
-\newpage
-
-\subsection{À propos de \LaTeX}
-\LaTeX  est un langage bien connu de la communauté scientifique, utilisé pour la composition de documents.
-Il permet notamment de mettre en place des feuilles de style normalisées, ou encore de construire des expressions mathématiques.
-Ce document a été écrit en \LaTeX.
-% write something here ?
-
-\subsection{Le langage Vala}
-\label{sub:vala}
-Vala\footnote{\textit{\url{https://wiki.gnome.org/Projects/Vala/About}}} est un langage développé pour le projet Gnome.
-Il vise à être une alternative au C\# et au Java, en proposant une syntaxe puissante orientée objet.
-Il se base sur la librairie GObject et est compilé en C via la commande \texttt{valac}.
-
-\begin{figure}[h] % TODO réduire l'espacement
-\begin{lstlisting}
-int main (string[] args) {
-
-    // Output the number of arguments
-    stdout.printf ("%d command line argument(s):\n", args.length);
-
-    // Enumerate all command line arguments
-    foreach (string arg in args) {
-        stdout.printf ("%s\n", arg);
-    }
-
-    // Exit code (0: success, 1: failure)
-    return 0;
-}
-\end{lstlisting}
-\caption{"Command-Line Arguments and Exit Code" en Vala, tiré de \url{wiki.gnome.org/Projects/Vala/BasicSample}}
-\end{figure}
-\section{Compiler LaTeXila}
-\label{cha:compiler}
-La compilation d'un projet GNOME est un processus complexe pour un non-initié.
-L'obtention de paquets en pré-série souvent non stables est déconseillée pour les non-développeurs du fait de leur stabilité toute relative.
-On utilise donc des outils spécifiques de manière à séparer environnement utilisateur et environnement de test. 
-
-\subsection{Jhbuild}
-\label{sub:jhbuild}
-JHBuild est un outil conçu pour permettre au développeur de construire les librairies d'un projet dans un environnement bac-à-sable, de manière à éviter une instabilité de la machine de développement causée par l'utilisation de librairies en pré-version.
-
-Il fournit certaines commandes très utiles, telles que :
-
-\begin{figure}[h]
-\begin{tabular}{|l|l|}
-  \hline \texttt{jhbuild update <package>} & Met à jour le paquet et toutes ses dépendances. \\
-  \hline \texttt{jhbuild build <package>} & Met à jour et compile paquet et dépendances. \\
-  \hline \texttt{jhbuild buildone <package>} & Ne compile que le paquet ciblé. \\
-  \hline \texttt{jhbuild make <target>} & Exécute le Makefile à l'emplacement courant. \\
-  \hline
-\end{tabular}
-\caption{Utilisation de JHBuild}
-\end{figure}
-
-Ainsi, un \textit{jhbuild build latexila} réalise, pour chaque dépendances de latexila un \textit{checkout} sur la branche master du dépôt, suivi d'un \textit{fetch} puis d'un \textit{rebase} suivi de l'exécution d'un \textit{make all}.
-
-Dans le cas de la compilation d'une version de test, on utilisera \textit{jhbuild make}, qui nous permettra de compiler sur la branche courante.
-% à développer
 
 \chapter{Étude pratique} % (fold)
 \label{cha:etude_pratique}
@@ -148,7 +77,7 @@ Cette complétion est donc dite \textit{statique}, car elle ne s'adapte pas au c
 
 \begin{description}
   \item[Fonction] de la forme \textbackslash\textit{fonction}\{argument\}, défini par \LaTeX
-  \item[Argument] peut être définit par \LaTeX~ou tiré de l'environnement utilisateur\footnote{non pris en charge car nécéssite une complétion dynamique}
+  \item[Argument] peut être définit par \LaTeX~ou tiré de l'environnement utilisateur\footnote{non pris en charge car nécessite une complétion dynamique}
 \end{description}
 
 \subsection{Une complétion dynamique}
@@ -161,7 +90,7 @@ Afin d'améliorer ce mécanisme de complétion pour qu'il prenne en charge l'arg
 \subsection{Git}
 \label{sub:git}
 Git est le VCS\footnote{Version Control System} utilisé par la très grande majorité des projets open-source. LaTeXiLa est hébergé sur le dépôt git du projet Gnome\footnote{\url{git.gnome.org}}  et un miroir est également disponible sur Github\footnote{\url{https://github.com/GNOME/latexila}}.
-Pour ce projet, nous avons créé un \textit{fork} du dépôt principal sur Github et travaillé sur une branche annexe, régulièrement mise à jour à partir du dépôt pricipal.
+Pour ce projet, nous avons créé un \textit{fork} du dépôt principal sur Github et travaillé sur une branche annexe, régulièrement mise à jour à partir du dépôt principal.
 Un patch entre la \textbf{branche principale} et la \textbf{branche de test} est ensuite créé avec \texttt{git patch} et posté sur le bugzilla du projet.
 
 \subsection{Bugzilla}
@@ -195,7 +124,7 @@ Ces résultats sont ensuite intégrés au \textit{Completion Provider}, classe u
 \label{fig:uml_completion_structure}
 \centering
 \include{./draw/uml_completion_structure}
-\caption{Le diagramme UML de la structure de completion.}
+\caption{Le diagramme UML de la structure de complétion.}
 \end{figure}
 
 À ce stade, la complétion prend en charge le document courant, mais l'utilisation du parseur déjà existant implique certaines contraintes, celle de ne pas pouvoir l'appeler quand on le souhaite.
@@ -206,10 +135,10 @@ Conserver ces données éviterai des parsage redondants et permettrait d'économ
 
 \section{Intégration d'une recherche à plusieurs documents}
 L'étape suivante a été l'intégration de la complétion pour tous les documents ouverts dans LaTeXiLa, permettant ainsi de proposer une complétion propre à chaque document et d'éviter les propositions inappropriées.
-Problèmes : comment choisir parmis les propositions celles liée au document courant ? Et comment stoker ces différents ensembles de choix de complétion de manière à pouvoir les mettre à jour ?
+Problèmes : comment choisir parmi les propositions celles liée au document courant ? Et comment stoker ces différents ensembles de choix de complétion de manière à pouvoir les mettre à jour ?
 
-Ceci nous a conduit à rechercher une structure de donnée adaptée, et à l'implémenter après avoir étudié la documentation de ces structures dans le langage vala.
-Nous avons opté pour l'ajout d'une table de hachage au \textit{CompletionProvider}, qui stokera les ensemble de choix de complétion, indexés par le chemin absolu du fichier .tex auquel ils correspondent.
+Ceci nous a conduit à rechercher une structure de donnée adaptée, et à l'implémenter après avoir étudié la documentation de ces structures dans le langage Vala.
+Nous avons opté pour l'ajout d'une table de hachage au \textit{CompletionProvider}, qui stockera les ensemble de choix de complétion, indexés par le chemin absolu du fichier .tex auquel ils correspondent.
 
 %Le diagramme de séquence d'une demande de complétion
 \begin{figure}[h]
@@ -230,11 +159,11 @@ Cet aspect nous conduit également à proposer des choix de complétion provenan
 \section{Intégration des fichiers non-ouverts}
 Après discussion avec notre encadrant, nous avons décidé de limiter les choix de complétion pour un document à l'ensemble des labels déclarés dans les documents .tex de son répertoire.
 Ce point est sujet à discussion, et nous y reviendrons par la suite.
-Nous nous sommes donc intéressés à la notion de fichier en vala, et à leur manipulation.
+Nous nous sommes donc intéressés à la notion de fichier en Vala, et à leur manipulation.
 Les données sont désormais filtrées sur le chemin absolu du répertoire parent du document courant.
 D'autre part, nous avons décidé de dissocier le parseur des labels du parseur de la structure du document, séparant ainsi ces deux aspects distincts.
 
-%Le diagramme de séquence d'une analyse enarrière plan
+%Le diagramme de séquence d'une analyse en arrière plan
 \begin{figure}[h]
 \label{fig:multiple_doc_completion}
 \centering
@@ -247,7 +176,7 @@ Les choix proposés sont les labels déclarés dans les documents .tex du même 
 
 \chapter{Conclusion}
 Le mécanisme de complétion, auparavant \textit{statique} prend désormais en charge une complétion \textit{dynamique} sur les labels déclarés par l'utilisateur.
-Cependant, notre solution est notamment criticable sur le point suivant : le filtrage des choix de complétion proposés, sur le répertoire parent du document courant.
+Cependant, notre solution est notamment critiquable sur le point suivant : le filtrage des choix de complétion proposés, sur le répertoire parent du document courant.
 En effet, certains utilisateurs sont susceptibles d'utiliser des sous-répertoires pour organiser leurs fichiers, et ne bénéficieraient donc pas de la complétion souhaitée.
 De plus, il arrive que certains fichiers .tex ne soient que des anciennes versions de rapports, voire des fichiers de tests. Dans ce cas, notre mécanisme de complétion proposerait les labels déclarés dans ces fichiers, alors qu'ils ne sont pas souhaités.
 
@@ -257,5 +186,12 @@ Après discussion avec notre encadrant et monsieur Wilmet, nous avons établi qu
 On pourrait ainsi proposer une complétion ne prenant en compte que les fichiers faisant partie du même projet, et éviter les points précédemment soulevés.
 
 Cette étude pratique a été pour nous l'occasion de découvrir le fonctionnement des projets open-source.
+
+
+\section*{\centerline{Remerciements}} % (fold)
+\begin{center}
+\label{sec:remerciements}
+Nous remercions Arnaud Blouin, notre encadrant, pour sa disponibilité et ses conseils, ainsi que Sébastien Wilmet, développeur et mainteneur de Latexila, pour l'aide qu'il nous a apporté.
+\end{center}
 
 \end{document}
