MY NAME IS "BOSCHET" not "BOCHET"
ZOMGZOMG :exclamation: :rage:

--- a/report/index.tex
+++ b/report/index.tex
@@ -26,7 +26,7 @@
 %% ** Begin document ** %%
 
 \title{Étude pratique : Amélioration de la complétion automatique de \LaTeX{}ila}
-\author{Axel Caro\and François Bochet\and Maximilien Richer}
+\author{Axel Caro\and François Boschet\and Maximilien Richer}
 \date{2014-2015}
 
 \begin{document}
