Fix latexila features

--- a/report/index.tex
+++ b/report/index.tex
@@ -21,7 +21,7 @@
   {\Large\bfseries} % format
   {}                % label
   {0pt}             % sep
-  {\huge}           % before-code
+  {\huge}         % before-code
 
 %% ** Begin document ** %%
 
@@ -51,12 +51,12 @@ Latexila est un projet d'éditeur LaTeX pour le projet Gnome, dont le développe
 Bien que commencé en C, le projet a été porté vers le langage Vala en 2010. Latexila adopte une approche centrée sur le code, ce qui lui permet d'être bien plus léger que nombre d'autres éditeurs, comme TeXMaker\footnote{\url{http://www.xm1math.net/texmaker/index_fr.html}} par exemple.
 
 De par cette philosophie, il ne possède pas de module WYSIWYG\footnote{What You See Is What You Get - Un mode d'édition ou l'utilisateur édite directement une vue correspondant au rendu final}, ce qui le rend moins facile d'accès.
-Il met cependant à la disposition de l'utilisateur des outils puissant qui en font bien plus qu'un simple éditeur de texte, comme:
+Il met cependant à la disposition de l'utilisateur des outils puissant qui en font bien plus qu'un simple éditeur de texte, comme :
 
 \begin{itemize}
-	\item Compilation assistée
-	\item Gestion de projet simplifiée
-	\item Complétion à la saisie des commandes \LaTeX
+	\item La compilation assistée
+	\item Une gestion de projet simplifiée
+	\item Une complétion à la saisie des commandes \LaTeX
 \end{itemize}
 
 \chapter{Étude pratique} % (fold)
